--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,3 +103,36 @@ header nav ul li a {
 }
 
 /* About Me styles */
+.about-me {
+    margin: 0 auto 20px auto;
+}
+
+.about-me h2 {
+    color: var(--primary-color);
+    font-size: 32px;
+    font-weight: normal;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.my-info {
+    display: flex;
+    margin: 40px 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.my-info img {
+    height: 225px;
+    width: 225px;
+    border-radius: 50%;
+    margin: 0 40px 0 0px;
+}
+
+.my-info article {
+    width: 60%;
+    line-height: 1.7;
+}
+
+/* Projects styles */
