--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,12 @@ header nav ul li a {
     padding: 10px 15px;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 0 0 30px 0;
+}
+
 /* hero styles */
 .hero {
     display: flex;
