--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@ header nav ul {
     list-style: none;
 }
 
+header nav ul li :hover {
+    color: var(--primary-color);
+}
+
 header nav ul li a {
     padding: 10px 15px;
 }
@@ -52,7 +56,7 @@ header nav ul li a {
 footer {
     display: flex;
     justify-content: center;
-    padding: 0 0 30px 0;
+    padding: 10px 0 30px 0;
 }
 
 /* hero styles */
